Style the home page. Adjust panels responsiveness. Overflow issue.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -48,10 +48,10 @@ html {
 }
 
 .content {
-    width: 99vw;
+    width: 100vw;
     /* margin-top: -20px; */
     box-shadow: 0 0 20px -6px rgba(0, 0, 0, 0.2);
-    background: rgba(0, 0, 0, 0.514);
+    background: rgba(0, 0, 0, 0.3);
 }
 
 .content .left {
